force-app/main/default/objects/Session__c/fields/Student_Feedback_Comment__c.field-meta.xml
<CustomField>
    <fullName>Student_Feedback_Comment__c</fullName>
    <description>Feedback provided by student for this particular session. Collected by Coach using FormAssembly form</description>
    <inlineHelpText>Feedback provided by student for this particular session. Collected by Coach using FormAssembly form</inlineHelpText>
    <label>Student Feedback Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>