force-app/main/default/objects/Session__c/fields/Student_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_Feedback_Date__c</fullName>
    <description>Date feedback form was submitted</description>
    <inlineHelpText>Date feedback form was submitted</inlineHelpText>
    <label>Student Feedback Date</label>
    <type>Date</type>
</CustomField>