force-app/main/default/objects/Session__c/fields/Student_Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>Student_Feedback_Rating__c</fullName>
    <description>Rating provided by student for this particular session. Collected by Coach using FormAssembly form</description>
    <inlineHelpText>Rating provided by student for this particular session. Collected by Coach using FormAssembly form</inlineHelpText>
    <label>Student Feedback Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>